@@ -52,7 +52,7 @@ final class ImportBuildfile extends javax.swing.JPanel implements DocumentListen
     }
     
     private void resize() {
-        int width = (new Double(jLabelDesc.getFontMetrics(jLabelDesc.getFont()).getStringBounds(jLabelDesc.getText(), getGraphics()).getWidth() / 2.7)).intValue() + 40;
+        int width = Double.valueOf(jLabelDesc.getFontMetrics(jLabelDesc.getFont()).getStringBounds(jLabelDesc.getText(), getGraphics()).getWidth() / 2.7).intValue() + 40;
         int height = (jLabelDesc.getFont().getSize() * 5) + 100;
         if (width < 400)
             width = 400;
